@@ -1,3 +1,8 @@
+2002-07-25  Mattia Barbon  <mbarbon@dsi.unive.it>
+
+	* include/commctrl.h: Avoid redefinition of CDN_FIRST/LAST.
+	* include/commdlg.h: Likewise.
+
 2002-07-24  Danny Smith  <dannysmith@users.sourceforge.net>
 
 	* include/oleauto.h (V_UNION): Correct definition for case of
